# dotfiles

./: .Rprofile  .Xmodmap  .Xresources  .avrduderc  .conkyrc  .ctags  .flake8  .gemrc  .gitconfig  .gitignore  .gitignore_global  .npmrc  .profile  .pylintrc  .taskrc  .tmux.conf  .vimrc  .xbindkeysrc  .xinitrc  .xmobarrc  .xsession  .zshrc  init.vim  install_apt.list  install_go.list  install_snap.list  install_src.list  pkglist.txt  python2-requirements.txt  python3-requirements.txt  redshift.conf  requirements.txt
.config/: redshift.conf
.config/BraveSoftware/Brave-Browser/NativeMessagingHosts/: gpgmejson.json
.config/nvim/: coc-settings.json  init.vim
.config/ranger/: scope.sh
.conky/: clock_rings.lua
.i3/: config  py3status.conf
.i3/py3status/: protonvpn.py
.k9s/: hotkey.yml
.local/share/applications/: artisan.desktop  brave-personal.desktop  brave-work.desktop  defaults.list  heidisql.desktop  sclack.desktop  vimwiki.desktop
.nvm/: default-packages
.pip/: pip.conf
.task/hooks/: on-modify.py
.todo/: config
.w3m/: config
.xmonad/: .gitignore  .vimrc_local.vim  install.sh  packages.list  stack.yaml  szeist-xmonadrc.cabal  xmonad.hs
.xmonad/lib/Utils/: BackgroundImage.hs  Outputs.hs  Screen.hs
Code/User/: settings.json
dunst/: dunstrc
etc/sudoers.d/: 020-iszenasi-fix_fprint
etc/systemd/system/: protonvpn.service
i3/: config  i3status.conf  py3status.conf
i3/py3status/: nm_vpn_names.py  openvpn.py
onedrive/: config
